--- a/index.html
+++ b/index.html
@@ -50,29 +50,40 @@
               src="img/bannerarayu.jpeg"
               style="object-fit: cover"
             /> -->
-            <div class="text-center banner-txt">
-              <h1 class="display-1 font-secondary text-white mt-4 mb-md-4 glow">
+            <div class="text-center">
+              <h1
+                class="fade-in display-1 font-secondary text-white mt-4 mb-md-4 glow"
+              >
                 The Wedding Invitation
               </h1>
-              <h1 class="display-1 font-secondary text-white mt-4 mb-md-4 glow">
+              <h1
+                class="fade-in delayed display-1 font-secondary text-white mt-4 mb-md-4 glow"
+              >
                 of
               </h1>
               <h1
-                class="display-1 font-secondary text-white mt-4 mb-md-4 glow mt-16"
+                class="fade-in delayedSecond display-1 font-secondary text-white mt-4 mb-md-4 glow mt-16"
               >
                 Arnav & Ayushi
               </h1>
             </div>
             <div class="d-flex justify-content-center mt-5 pt-5">
-              <button type="button" id="closemodal" class="btn btn-outline-danger">
-                <h6
-                class="text-uppercase text-primary my-3 glow backtotop"
-                style="letter-spacing: 3px"
+              <button
+                type="button"
+                id="closemodal"
+                class="d-flex btn btn-outline-danger"
               >
-                welcome
-              </h6>
-            </button>
-          </div>
+                <h6 class="text-primary my-3 glow" style="letter-spacing: 3px">
+                  #ARNAVfoundhisASHIki
+                </h6>
+                <!-- <h6
+                  class="text-uppercase text-primary ml-4 my-3 glow backtotop"
+                  style="letter-spacing: 3px"
+                >
+                  ->
+                </h6> -->
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -139,10 +150,7 @@
     <!-- Navbar End -->
 
     <!-- Carousel Start -->
-    <div
-      class="container-fluid p-0"
-      id="home"
-    >
+    <div class="container-fluid p-0" id="home">
       <div
         id="header-carousel"
         class="carousel slide carousel-fade"
@@ -155,7 +163,7 @@
           >
             <img
               class="position-absolute w-100 h-100"
-              src="img/arayu01.jpg"
+              src="img/arayu8.jpg"
               style="object-fit: cover"
             />
             <div
@@ -605,32 +613,52 @@
       </div>
       <div class="owl-carousel gallery-carousel">
         <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/arayu2.jpg" alt="" />
-          <a href="img/gallery-1.jpg" data-lightbox="gallery">
+          <img
+            class="img-fluid w-100"
+            src="img/IMG_20180508_223818.jpg"
+            alt=""
+          />
+          <a href="img/IMG_20180508_223818.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
         <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/arayu6.jpg" alt="" />
-          <a href="img/gallery-3.jpg" data-lightbox="gallery">
-            <i class="fa fa-2x fa-plus text-white"></i>
-          </a>
-        </div>
-        <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/arayu1.jpg" alt="" />
-          <a href="img/gallery-4.jpg" data-lightbox="gallery">
+          <img
+            class="img-fluid w-100"
+            src="img/IMG-20171010-WA0013.jpg"
+            alt=""
+          />
+          <a href="img/IMG-20171010-WA0013.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
         <div class="gallery-item">
           <img class="img-fluid w-100" src="img/arayu4.jpg" alt="" />
-          <a href="img/gallery-5.jpg" data-lightbox="gallery">
+          <a href="img/arayu4.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
         <div class="gallery-item">
-          <img class="img-fluid w-100" src="img/arayu5.jpeg" alt="" />
-          <a href="img/gallery-6.jpg" data-lightbox="gallery">
+          <img class="img-fluid w-100" src="img/arayu6.jpg" alt="" />
+          <a href="img/arayu6.jpg" data-lightbox="gallery">
+            <i class="fa fa-2x fa-plus text-white"></i>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <img class="img-fluid w-100" src="img/arayu03.jpg" alt="" />
+          <a href="img/arayu03.jpg" data-lightbox="gallery">
+            <i class="fa fa-2x fa-plus text-white"></i>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <img class="img-fluid w-100" src="img/arayu3.jpeg" alt="" />
+          <a href="img/arayu3.jpeg" data-lightbox="gallery">
+            <i class="fa fa-2x fa-plus text-white"></i>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <img class="img-fluid w-100" src="img/arayu1.jpg" alt="" />
+          <a href="img/arayu1.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
