--- a/index.html
+++ b/index.html
@@ -71,17 +71,12 @@
               <button
                 type="button"
                 id="closemodal"
-                class="d-flex btn btn-outline-danger"
+                class="d-flex align-items-center btn btn-outline-danger"
               >
                 <h6 class="text-primary my-3 glow" style="letter-spacing: 3px">
                   #ARNAVfoundhisASHIki
                 </h6>
-                <!-- <h6
-                  class="text-uppercase text-primary ml-4 my-3 glow backtotop"
-                  style="letter-spacing: 3px"
-                >
-                  ->
-                </h6> -->
+                <img src="img/arrow-right.svg" class="ml-4 glow backtotop" style="width: 20px">
               </button>
             </div>
           </div>
@@ -403,16 +398,16 @@
                 style="letter-spacing: 2px"
               >
                 Request the honour of your presence and blessing on the
-                auspacious occasion of the wedding ceremony of
+                auspicious occasion of the wedding ceremony of
               </h6>
               <h1 class="font-secondary display-4 my-3">Arnav & Ayushi</h1>
-              <h6
+              <!-- <h6
                 class="font-weight-normal m-1 text-center"
                 style="letter-spacing: 2px"
               >
                 The day when Arnav & Ayushi will tie the knot and begin their
                 new life as a happily married couple
-              </h6>
+              </h6> -->
               <h6
                 class="font-weight-normal my-2 text-center"
                 style="letter-spacing: 2px"
@@ -656,12 +651,12 @@
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
         </div>
-        <div class="gallery-item">
+        <!-- <div class="gallery-item">
           <img class="img-fluid w-100" src="img/arayu1.jpg" alt="" />
           <a href="img/arayu1.jpg" data-lightbox="gallery">
             <i class="fa fa-2x fa-plus text-white"></i>
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- Gallery End -->
@@ -679,8 +674,13 @@
             </h6> -->
             <h1 class="font-secondary display-4">Our Wedding Venue</h1>
             <img class="img-fluid p-2" src="img/border.svg" alt="border" />
-            <p>JB INNOVATIONS YASH LAWN AND BANQUETS</p>
-            <p></p>
+            <!-- <p>JB INNOVATIONS YASH LAWN AND BANQUETS</p> -->
+            <h6
+              class="text-uppercase text-primary mb-3"
+              style="letter-spacing: 3px"
+            >
+              JB INNOVATIONS YASH LAWN AND BANQUETS
+            </h6>
           </div>
           <div class="row p-2 justify-content-center">
             <iframe
