--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                 <h6 class="text-primary my-3 glow" style="letter-spacing: 3px">
                   #ARNAVfoundhisASHIki
                 </h6>
-                <img src="img/arrow-right.svg" class="ml-4 glow backtotop" style="width: 20px">
+                <img
+                  src="img/arrow-right.svg"
+                  class="ml-4 glow backtotop"
+                  style="width: 20px"
+                />
               </button>
             </div>
           </div>
@@ -460,6 +464,13 @@
             </div>
             <div class="row">
               <div class="col-md-6 text-center text-md-right">
+                <img
+                  class="img-fluid ml-md-3"
+                  src="img/engagement.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="col-md-6 text-center text-md-left">
                 <div
                   class="h-100 d-flex flex-column justify-content-center bg-secondary bg_custom p-4 mr-md-3"
                 >
@@ -469,13 +480,6 @@
                   <p class="m-0">Sunday, February 26, 2023</p>
                   <p class="m-0">7:30 PM Onwards</p>
                 </div>
-              </div>
-              <div class="col-md-6 text-center text-md-left">
-                <img
-                  class="img-fluid ml-md-3"
-                  src="img/engagement.jpg"
-                  alt=""
-                />
               </div>
             </div>
             <div class="row">
@@ -496,6 +500,13 @@
             </div>
             <div class="row">
               <div class="col-md-6 text-center text-md-right">
+                <img
+                  class="img-fluid ml-md-3"
+                  src="img/receptions.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="col-md-6 text-center text-md-left">
                 <div
                   class="h-100 d-flex flex-column justify-content-center bg-secondary bg_custom p-4 mr-md-3"
                 >
@@ -505,13 +516,6 @@
                   <p class="m-0">Sunday, February 27, 2023</p>
                   <p class="m-0">7:30 PM Onwards</p>
                 </div>
-              </div>
-              <div class="col-md-6 text-center text-md-left">
-                <img
-                  class="img-fluid ml-md-3"
-                  src="img/receptions.jpg"
-                  alt=""
-                />
               </div>
             </div>
           </div>
