--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 class="font-weight-normal my-2 text-center"
                 style="letter-spacing: 2px"
               >
-                on Saturday, 27th February, 2023
+                on Monday, 27th February, 2023
               </h6>
               <h6
                 class="font-weight-normal m-1 text-center"
@@ -493,7 +493,7 @@
                   <h1 class="font-secondary display-4">Mangal</h1>
                   <h1 class="font-secondary display-4">Phere</h1>
                   <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
-                  <p class="m-0">Sunday, February 27, 2023</p>
+                  <p class="m-0">Monday, February 27, 2023</p>
                   <p class="m-0">2:30 PM Onwards</p>
                 </div>
               </div>
@@ -513,7 +513,7 @@
                   <h1 class="font-secondary display-4">Reception &</h1>
                   <h1 class="font-secondary display-4">Dinner</h1>
                   <!-- <p class="text-uppercase mb-2">01 Jan 2050</p> -->
-                  <p class="m-0">Sunday, February 27, 2023</p>
+                  <p class="m-0">Monday, February 27, 2023</p>
                   <p class="m-0">7:30 PM Onwards</p>
                 </div>
               </div>
@@ -566,7 +566,7 @@
                 <img
                   class="position-absolute w-100 h-100"
                   src="img/arnav.jpeg"
-                  style="object-fit: cover"
+                  style="object-fit: cover; filter: grayscale(90%);"
                 />
               </div>
               <div class="col-md-6 p-0 text-center text-md-right">
