--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Arnav & Ayushi</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta content="Arnav & Ayushi" name="keywords" />
+    <meta content="The Wedding Invitation" name="description" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
