--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Arnav & Ayushi" name="keywords" />
     <meta content="The Wedding Invitation" name="description" />
+    <meta
+      property="og:image"
+      content="https://instagram.flko9-1.fna.fbcdn.net/v/t51.2885-15/306288394_5494488730596746_5082714866938513428_n.webp?stp=dst-jpg_e35&_nc_ht=instagram.flko9-1.fna.fbcdn.net&_nc_cat=102&_nc_ohc=e9E_B7JvFu4AX8KIaGl&tn=R0GiHQOvw2WLWn_r&edm=ACWDqb8BAAAA&ccb=7-5&ig_cache_key=Mjk0NjQ2NjgyODEwNTEwNjYxNQ%3D%3D.2-ccb7-5&oh=00_AfDixowl8XXsnZ6jrhyFVQFJ3J-IKYLHgEzbG-Jwv4h5Rw&oe=63DEFD98&_nc_sid=1527a3"
+    />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -566,7 +570,7 @@
                 <img
                   class="position-absolute w-100 h-100"
                   src="img/arnav.jpeg"
-                  style="object-fit: cover; filter: grayscale(90%);"
+                  style="object-fit: cover; filter: grayscale(90%)"
                 />
               </div>
               <div class="col-md-6 p-0 text-center text-md-right">
