--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@
               <div class="col-md-6 p-0" style="min-height: 400px">
                 <img
                   class="position-absolute w-100 h-100"
-                  src="img/arnav.jpeg"
-                  style="object-fit: cover; filter: grayscale(90%)"
+                  src="img/arnav10.jpeg"
+                  style="object-fit: cover"
                 />
               </div>
               <div class="col-md-6 p-0 text-center text-md-right">
@@ -612,7 +612,7 @@
         <h1 class="font-secondary display-4 text-white">
           Our Beautiful Moments
         </h1>
-        <img class="img-fluid p-2" src="img/border.svg" alt="border" />
+        <!-- <img class="img-fluid p-2" src="img/border.svg" alt="border" /> -->
       </div>
       <div class="owl-carousel gallery-carousel">
         <div class="gallery-item">
