--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 class="d-flex align-items-center btn btn-outline-danger"
               >
                 <h6 class="text-primary my-3 glow" style="letter-spacing: 3px">
-                  #ARNAVfoundhisASHIki
+                  #ARNAVfoundhisASHIqui
                 </h6>
                 <img
                   src="img/arrow-right.svg"
